@startuml

title __COMMON's Class Diagram__\n

  namespace Community.Common {
    class Community.Common.CommentAdaptor {
        ~ mInflator : LayoutInflater
        ~ rows : ArrayList<commentFormat>
        + CommentAdaptor()
        + getCount()
        + getItem()
        + getItemId()
        + getView()
    }
  }
  

  namespace Community.Common {
    class Community.Common.Community {
        {static} + s : ArrayList<String>
        ~ PlanList : ListView
        ~ btn4_back : ImageView
        - btn1_login : Button
        - btn2_logout : Button
        - btn3_clearUser : Button
        - btn5_new : Button
        - btn6_old : Button
        + onClick()
        # onCreate()
        - initView()
    }
  }
  

  namespace Community.Common {
    class Community.Common.DBOpenHelperComment {
        - db : SQLiteDatabase
        + DBOpenHelperComment()
        + add()
        + changeComment()
        + changePlaces()
        + deleteAll()
        + deleteRow()
        + deleteTable()
        + getAllData()
        + onCreate()
        + onUpgrade()
    }
  }
  

  namespace Community.Common {
    class Community.Common.commentFormat {
        - comment : String
        - places : String
        - randomATA : String
        - userID : int
        - userName : String
        + commentFormat()
        + getComment()
        + getPlaces()
        + getRandomATA()
        + getuserID()
        + getuserName()
        + setComment()
        + setPlaces()
        + setRandomATA()
        + setuserID()
        + setuserName()
        + toString()
    }
  }
  

  Community.Common.CommentAdaptor -up-|> android.widget.BaseAdapter
  Community.Common.Community .up.|> android.view.View.OnClickListener
  Community.Common.Community -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Common.Community o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Community.Common.Community o-- Login.DBOpenHelperUser : mDBOpenHelperUser
  Community.Common.DBOpenHelperComment -up-|> android.database.sqlite.SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
